--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ body {
 .price-section {
   margin-top: 3.2rem;
   display: flex;
-  justify-content: space-between;
+  gap: 2rem;
   align-items: center;
 }
 .price--current {
